--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@ layout: default
 <div align="center">
   <p style="text-align:center;font-size:14px">本站为共识网(www.21ccom.net)在互联网档案馆(Wayback Machine)的存档的索引，<a href="{{ site.baseurl }}/external_links/">外部链接</a></p>
   <p style="text-align:center;color:blue;font-size:20px">点击下方关键词或日期，显示索引结果，或者在搜索框输入关键词</p>
+  <p style="text-align:center;color:purple;font-size:14px">注意：加载计数上千的标签时速度较慢</p>
   <span id="search-container" >
   <input type="text" id="search-input" placeholder="標題 作者 來源 日期 (已恢复{{ site.data.search | size }}条记录)"
-    style="margin: 10px 0px 0px 0px; height: 50px;width: 85%" title="本站最正確的打開方式">
+    style="margin: 10px 0px 0px 0px; height: 30px;width: 85%" title="本站最正確的打開方式">
     <a><i class="fa fa-search" title="限前{{ site.searchlimit }}結果"></i></a>
   </span>
 </div>
