--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
 </div>
 
 <noscript>
-  <p style="text-align:center;font-size:14px">本页需开启Javascript以正常工作 Javascript is required for functionality</p>
+  <p style="text-align:center;color:red;font-size:20px">本页需开启Javascript以正常工作 Javascript is required for functionality</p>
 </noscript>
 
 <div class="tags wrapper-masthead">
