--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@ layout: default
 ---
 
 <div align="center">
-  <p style="text-align:center;font-size:14px">本站为共识网(www.21ccom.net)在互联网档案馆(Wayback Machine)的存档的索引，<a href="{{ site.baseurl }}/external_links/">外部链接</a></p>
+  <p style="text-align:center;font-size:14px">本站为共识网(www.21ccom.net)在互联网档案馆(Wayback Machine)的存档的索引。感谢随手存档的共识网读者！</p>
   <p style="text-align:center;color:blue;font-size:20px">打开方式：点击下方关键词或日期，或者在搜索框输入关键词</p>
   <span id="search-container" >
   <input type="text" id="search-input" placeholder="標題 作者 來源 日期 (已恢复{{ site.data.search | size }}条记录)"
     style="margin: 10px 0px 0px 0px; height: 30px;width: 85%" title="本站最正確的打開方式">
     <a><i class="fa fa-search" title="限前{{ site.searchlimit }}結果"></i></a>
   </span>
-  <p style="text-align:center;color:purple;font-size:14px">注意：计数上千的标签加载较慢 -- 让子弹飞会儿 </p>
+  <p style="text-align:center;color:purple;font-size:14px">注意：计数上千的标签加载较慢 <i>——让子弹飞会儿</i> | 共识网首页之<a href="{{ site.baseurl }}/external_links/">外部链接</a></p>
 </div>
 
 <noscript>
