--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ layout: default
 </div>
 
 <div>
-  <p style="text-align:center;font-size:14px">共识网首页<a href="{{ site.baseurl }}/external_links/">友情链接</a> | 本站<a href="https://github.com/NodeBE4/21ccom">代码</a> | 下载<a href="{{ site.baseurl }}/search.json">索引数据</a> | <a href="https://rawcdn.githack.com/NodeBE4/21ccom/19f26e73e12c603bffd730d443c6953c7bc85674/21ccom_net_all.txt">36万条共识网已存档链接</a></p>
+  <p style="text-align:center;font-size:14px">共识网首页<a href="{{ site.baseurl }}/external_links/">友情链接</a> | 本站<a href="https://github.com/NodeBE4/21ccom">代码</a> | 下载<a href="{{ site.baseurl }}/search.json">索引数据</a> | <a href="https://rawcdn.githack.com/NodeBE4/21ccom/19f26e73e12c603bffd730d443c6953c7bc85674/21ccom_net_all.txt">36万条共识网已存档链接</a> | 短链接 git.io/JLSg1 </p>
 </div>
 
 <script>
