--- a/all.html
+++ b/all.html
@@ -1,12 +1,14 @@
 ---
 layout: default
+title: 全部索引
+permalink: /all/
 ---
 
 <div align="center">
-  <p style="text-align:center;font-size:14px">本站为共识网(www.21ccom.net, 2016年10月猝)的互联网档案馆(Wayback Machine)存档的索引。<i>感谢那些随手存档的共识网读者！</i></p>
+  <p style="text-align:center;font-size:14px">本站为共识网(www.21ccom.net, 2016年10月猝)的互联网档案馆(Wayback Machine)存档的全部索引。<i>感谢那些随手存档的共识网读者！</i></p>
   <p style="text-align:center;color:blue;font-size:20px">打开方式：点击下方关键词或日期，或在搜索框内输入关键词</p>
   <span id="search-container" >
-  <input type="text" id="search-input" placeholder="標題 作者 來源 日期 (已收集{{ site.data.search | size }}條記錄)"
+  <input type="text" id="search-input" placeholder="標題 作者 來源 日期 (已收集{{ site.data.meta[0].size }}條記錄)"
     style="margin: 10px 0px 0px 0px; height: 30px;width: 85%" title="本站最正確的打開方式">
     <a><i class="fa fa-search" title="限前{{ site.searchlimit }}結果"></i></a>
   </span>
@@ -34,7 +36,7 @@ layout: default
 </div>
 
 <div>
-  <p style="text-align:center;font-size:14px">共识网首页<a href="{{ site.baseurl }}/external_links/">友情链接</a> | 本站<a href="https://github.com/NodeBE4/21ccom">代码</a> | 下载<a href="{{ site.baseurl }}/search.json">索引数据</a> | <a href="{{ site.baseurl }}/all/">全部索引</a> | <a href="https://rawcdn.githack.com/NodeBE4/21ccom/19f26e73e12c603bffd730d443c6953c7bc85674/21ccom_net_all.txt">56万条共识网已存档链接</a> | 短链接 git.io/JLSg1 </p>
+  <p style="text-align:center;font-size:14px">共识网首页<a href="{{ site.baseurl }}/external_links/">友情链接</a> | 本站<a href="https://github.com/NodeBE4/21ccom">代码</a> | 下载<a href="{{ site.baseurl }}/all.json">索引数据</a> | <a href="https://rawcdn.githack.com/NodeBE4/21ccom/19f26e73e12c603bffd730d443c6953c7bc85674/21ccom_net_all.txt">36万条共识网已存档链接</a> | 短链接 git.io/JLSg1 </p>
 </div>
 
 <script>
@@ -50,7 +52,25 @@ layout: default
 </script>
 
 
-{% include simple-search.html %}
+<!-- Html Elements for Search -->
+<ul id="results-container" class="searched" style="color: #2980B9;"></ul>
+
+<script src="{{ site.baseurl }}/assets/js/simple-jekyll-search.min.js"></script>
+
+<!-- Configuration -->
+<script>
+var sjs = SimpleJekyllSearch({
+  searchInput: document.getElementById('search-input'),
+  resultsContainer: document.getElementById('results-container'),
+  json: '{{site.baseurl}}/all.json',
+  searchResultTemplate: '<li><a href="{url}" title="跳转至时光机存档" target="_blank">{title}</a><time>{date}</time></li>',
+  noResultsText: '没找到',
+  limit: {{ site.searchlimit }},
+  fuzzy: false,
+  exclude: ['Welcome']
+})
+
+</script>
 
 
 
