--- a/all.html
+++ b/all.html
@@ -21,7 +21,7 @@ permalink: /all/
 
 <div class="tags wrapper-masthead">
   <ul class="label">
-    {% for tag in site.data.tags %}
+    {% for tag in site.data.tags2 %}
     {% assign count = tag.count | plus: 0 %}
     {% if count > 0 %}
     <li>
