--- a/all.html
+++ b/all.html
@@ -8,7 +8,7 @@ permalink: /all/
   <p style="text-align:center;font-size:14px">本站为共识网(www.21ccom.net, 2016年10月猝)的互联网档案馆(Wayback Machine)存档的全部索引。<i>感谢那些随手存档的共识网读者！</i></p>
   <p style="text-align:center;color:blue;font-size:20px">打开方式：点击下方关键词或日期，或在搜索框内输入关键词</p>
   <span id="search-container" >
-  <input type="text" id="search-input" placeholder="標題 作者 來源 日期 (已收集{{ site.data.meta[0].size }}條記錄)"
+  <input type="text" id="search-input" placeholder="標題 作者 來源 日期 (已收集{{ site.data.meta[0].all }}條記錄)"
     style="margin: 10px 0px 0px 0px; height: 30px;width: 85%" title="本站最正確的打開方式">
     <a><i class="fa fa-search" title="限前{{ site.searchlimit }}結果"></i></a>
   </span>
