--- a/home.html
+++ b/home.html
@@ -1,14 +1,14 @@
 ---
 layout: default
-title: 全部索引
-permalink: /all/
+title: 首页索引
+permalink: /home/
 ---
 
 <div align="center">
-  <p style="text-align:center;font-size:14px">本站为共识网(www.21ccom.net, 2016年10月猝)的互联网档案馆(Wayback Machine)存档的全部索引。<i>感谢那些随手存档的共识网读者！</i></p>
+  <p style="text-align:center;font-size:14px">本站为共识网(www.21ccom.net, 2016年10月猝)的互联网档案馆(Wayback Machine)存档的首页索引。<i>感谢那些随手存档的共识网读者！</i></p>
   <p style="text-align:center;color:blue;font-size:20px">打开方式：点击下方关键词或日期，或在搜索框内输入关键词</p>
   <span id="search-container" >
-  <input type="text" id="search-input" placeholder="標題 作者 來源 日期 (已收集{{ site.data.meta[0].all }}條記錄)"
+  <input type="text" id="search-input" placeholder="標題 作者 來源 日期 (已收集{{ site.data.meta[0].home }}條記錄)"
     style="margin: 10px 0px 0px 0px; height: 30px;width: 85%" title="本站最正確的打開方式">
     <a><i class="fa fa-search" title="限前{{ site.searchlimit }}結果"></i></a>
   </span>
@@ -21,7 +21,7 @@ permalink: /all/
 
 <div class="tags wrapper-masthead">
   <ul class="label">
-    {% for tag in site.data.tags2 %}
+    {% for tag in site.data.tags %}
     {% assign count = tag.count | plus: 0 %}
     {% if count > 0 %}
     <li>
@@ -36,7 +36,7 @@ permalink: /all/
 </div>
 
 <div>
-  <p style="text-align:center;font-size:14px">共识网首页<a href="{{ site.baseurl }}/external_links/">友情链接</a> | 本站<a href="https://github.com/NodeBE4/21ccom">代码</a> | 下载<a href="{{ site.baseurl }}/all.json">索引数据</a> | <a href="{{ site.baseurl }}/">首页索引</a> | <a href="https://rawcdn.githack.com/NodeBE4/21ccom/19f26e73e12c603bffd730d443c6953c7bc85674/21ccom_net_all.txt">54万条共识网已存档链接</a> | 短链接 git.io/JLSg1 </p>
+  <p style="text-align:center;font-size:14px">共识网首页<a href="{{ site.baseurl }}/external_links/">友情链接</a> | 本站<a href="https://github.com/NodeBE4/21ccom">代码</a> | 下载<a href="{{ site.baseurl }}/search.json">索引数据</a> | <a href="{{ site.baseurl }}/all/">全部索引</a> | <a href="https://rawcdn.githack.com/NodeBE4/21ccom/19f26e73e12c603bffd730d443c6953c7bc85674/21ccom_net_all.txt">54万条共识网已存档链接</a> | 短链接 git.io/JLSg1 </p>
 </div>
 
 <script>
@@ -52,25 +52,7 @@ permalink: /all/
 </script>
 
 
-<!-- Html Elements for Search -->
-<ul id="results-container" class="searched" style="color: #2980B9;"></ul>
-
-<script src="{{ site.baseurl }}/assets/js/simple-jekyll-search.min.js"></script>
-
-<!-- Configuration -->
-<script>
-var sjs = SimpleJekyllSearch({
-  searchInput: document.getElementById('search-input'),
-  resultsContainer: document.getElementById('results-container'),
-  json: '{{site.baseurl}}/all.json',
-  searchResultTemplate: '<li><a href="{url}" title="跳转至时光机存档" target="_blank">{title}</a><time>{date}</time></li>',
-  noResultsText: '没找到',
-  limit: {{ site.searchlimit }},
-  fuzzy: false,
-  exclude: ['Welcome']
-})
-
-</script>
+{% include simple-search.html %}
 
 
 
